# yt-Etl-Project-Api-Extract

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: dados_bitcoin.csv
src/: database.py  extract_api.py
